; ModuleID = '/home/carl/AnghaBench/gb-studio/appData/src/gb/src/extr_BankData.c_ReadBankedBankPtr.c'
source_filename = "/home/carl/AnghaBench/gb-studio/appData/src/gb/src/extr_BankData.c_ReadBankedBankPtr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@POP_BANK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ReadBankedBankPtr(i32 %0, i8* %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8, align 1
  store i32 %0, i32* %4, align 4
  store i8* %1, i8** %5, align 8
  store i8* %2, i8** %6, align 8
  %8 = load i32, i32* %4, align 4
  %9 = call i32 @PUSH_BANK(i32 %8)
  %10 = load i8*, i8** %6, align 8
  %11 = call i32 @memcpy(i8* %7, i8* %10, i32 1)
  %12 = load i32, i32* @POP_BANK, align 4
  %13 = load i8*, i8** %5, align 8
  %14 = call i32 @memcpy(i8* %13, i8* %7, i32 1)
  ret void
}

declare dso_local i32 @PUSH_BANK(i32) #1

declare dso_local i32 @memcpy(i8*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
